MKV memory leak
With attached file
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Demuxers: MKV Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Demuxers: MKV Severity::normal Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Author Maintainer
Added attachment:
- Author Maintainer
==20409==ERROR: LeakSanitizer: detected memory leaks Direct leak of 160 byte(s) in 1 object(s) allocated from: [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f10faed0bf0 in operator new(unsigned long) (/usr/lib/x86_64-linux-gnu/libasan.so.3+0xc2bf0) [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f10f08e236f in libmatroska::KaxSimpleBlock::Create() matroska/KaxBlock.h:310 Indirect leak of 45 byte(s) in 1 object(s) allocated from: [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f10faecfd28 in malloc (/usr/lib/x86_64-linux-gnu/libasan.so.3+0xc1d28) [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f10f08ef41a in libebml::EbmlBinary::ReadData(libebml::IOCallback&, libebml::ScopeMode) src/EbmlBinary.cpp:94 Indirect leak of 40 byte(s) in 1 object(s) allocated from: [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f10faed0bf0 in operator new(unsigned long) (/usr/lib/x86_64-linux-gnu/libasan.so.3+0xc2bf0) [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f10f08d90d8 in libmatroska::KaxInternalBlock::ReadData(libebml::IOCallback&, libebml::ScopeMode) src/KaxBlock.cpp:497 Indirect leak of 8 byte(s) in 1 object(s) allocated from: [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f10faed0bf0 in operator new(unsigned long) (/usr/lib/x86_64-linux-gnu/libasan.so.3+0xc2bf0) [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f10f08da165 in __gnu_cxx::new_allocator<libmatroska::DataBuffer*>::allocate(unsigned long, void const*) /usr/include/c++/6/ext/new_allocator.h:104 [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f10f08da165 in std::allocator_traits<std::allocator<libmatroska::DataBuffer*> >::allocate(std::allocator<libmatroska::DataBuffer*>&, unsigned long) /usr/include/c++/6/bits/alloc_traits.h:416 [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f10f08da165 in std::_Vector_base<libmatroska::DataBuffer*, std::allocator<libmatroska::DataBuffer*> >::_M_allocate(unsigned long) /usr/include/c++/6/bits/stl_vector.h:170 [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f10f08da165 in void std::vector<libmatroska::DataBuffer*, std::allocator<libmatroska::DataBuffer*> >::_M_emplace_back_aux<libmatroska::DataBuffer*>(libmatroska::DataBuffer*&&) /usr/include/c++/6/bits/vector.tcc:412 Indirect leak of 4 byte(s) in 1 object(s) allocated from: [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f10faed0bf0 in operator new(unsigned long) (/usr/lib/x86_64-linux-gnu/libasan.so.3+0xc2bf0) [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f10f08d9ffe in __gnu_cxx::new_allocator<int>::allocate(unsigned long, void const*) /usr/include/c++/6/ext/new_allocator.h:104 [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f10f08d9ffe in std::allocator_traits<std::allocator<int> >::allocate(std::allocator<int>&, unsigned long) /usr/include/c++/6/bits/alloc_traits.h:416 [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f10f08d9ffe in std::_Vector_base<int, std::allocator<int> >::_M_allocate(unsigned long) /usr/include/c++/6/bits/stl_vector.h:170 [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f10f08d9ffe in std::vector<int, std::allocator<int> >::_M_default_append(unsigned long) /usr/include/c++/6/bits/vector.tcc:557 SUMMARY: AddressSanitizer: 257 byte(s) leaked in 5 allocation(s).
- Filip Roséen assigned to @FilipRoseen-refp and unassigned @MigrationBot
assigned to @FilipRoseen-refp and unassigned @MigrationBot
- Owner
= 37fdb03acd
=[[http://git.videolan.org/?p=vlc.git;a=commit;h=37fdb03acd3ec85f73edf6741c97b1a05dc4e197 mkv/demux: Ebml_Parser: fix #18001 (closed) (memory-leak)]] - Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed
- Jean-Baptiste Kempf changed milestone to %3.0 FF
changed milestone to %3.0 FF
- Owner
Milestone renamed
Please register or sign in to reply