mkv/demux: Ebml_Parser: fix #18001 (memory-leak)

The previous implementation would not free the previous element stored
in the parser stack if an unexpected element is encountered, leading
to a memory-leak.

fixes #18001

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>